software/components/postgres/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin4-ingress
  namespace: postgres
  labels:
    hostk8s.component: postgres
    hostk8s.type: management-ui
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
  - host: pgadmin.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pgadmin4
            port:
              number: 80
